// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept container option 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: blue;
}

<body>
  
    
  <div
    id="container"
  >
    
  
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      .emotion-0{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;color:blue;}
    </style>
  </div>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`should accept insertionPoint option 1`] = `
<head>
  
    
  <style
    id="first"
  />
  <style
    data-emotion="test-insertion-point"
    data-s=""
  >
    
    .test-insertion-point-83n355{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;color:blue;}
  </style>
  
    
  <style
    id="last"
  />
  
  
</head>
`;

exports[`should not prefix pseudo-classes automatically when using explicitAmpersand option 1`] = `
:where([dir='rtl']) .emotion-0 {
  color: red;
}

.emotion-0 :is(p, ul)+:is(p, ul) {
  margin-top: 1em;
}

.emotion-0:before {
  content: 'test';
}

<body>
  <div
    id="container"
  >
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      .emotion-0{}
    </style>
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      :where([dir='rtl']) .emotion-0{color:red;}
    </style>
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      .emotion-0 :is(p, ul)+:is(p, ul){margin-top:1em;}
    </style>
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      .emotion-0:before{content:'test';}
    </style>
  </div>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`should prefix pseudo-classes automatically when not using explicitAmpersand option 1`] = `
.emotion-0:where([dir='rtl']) .emotion-0 {
  color: red;
}

.emotion-0:is(p, ul)+:is(p, ul) {
  margin-top: 1em;
}

.emotion-0:before {
  content: 'test';
}

<body>
  <div
    id="container"
  >
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      .emotion-0{}
    </style>
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      .emotion-0:where([dir='rtl']) .emotion-0{color:red;}
    </style>
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      .emotion-0:is(p, ul)+:is(p, ul){margin-top:1em;}
    </style>
    <style
      data-emotion="test-container"
      data-s=""
    >
      
      .emotion-0:before{content:'test';}
    </style>
  </div>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`throws correct error with invalid key 1`] = `"Emotion key must only contain lower case alphabetical characters and - but "." was passed"`;
